--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Learn more about git On <a href="https://git-scm.com">the official website</a></p>
 </body>
 </html>
