--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>This heading was added during dev development</h3>
     <p>Learn more about git On <a href="https://git-scm.com">the official website</a></p>
 </body>
 </html>
