--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>This heading was added during dev development</h3>
+    <p>another change in the dev env</p>
     <p>Learn more about git On <a href="https://git-scm.com">the official website</a></p>
 </body>
 </html>
